Fix heading alignment, pagination and teaser spacing

--- a/hra/patternlab/site/sass/molecules/_pagination.scss
+++ b/hra/patternlab/site/sass/molecules/_pagination.scss
@@ -19,7 +19,7 @@
             margin-right: 15px;
         }
 
-        &:last-of-type {
+        &:nth-last-child(2) {
             margin-right: 0;
         }
 
