--- a/hra/patternlab/site/sass/molecules/hero/_hero--slim.scss
+++ b/hra/patternlab/site/sass/molecules/hero/_hero--slim.scss
@@ -24,7 +24,7 @@
     }
 
     &__content {
-        max-width: $standard-body-width;
+        max-width: 400px;
         margin: 180px auto 0;
         color: #fff;
 
